<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_cardview"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/default_item_corner_radius"
    app:cardElevation="@dimen/default_item_elevation"
    app:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:clipToPadding="false">

        <ImageView
            android:id="@+id/item_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:contentDescription="@string/item_image_description"
            android:src="@drawable/geronimo"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/item_title"
            app:layout_constraintTop_toBottomOf="@id/item_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/default_title_text"
            android:text="@string/item_title"
            android:layout_marginTop="@dimen/default_item_margin"
            android:layout_marginLeft="@dimen/default_item_margin"
            android:layout_marginStart="@dimen/default_item_margin"/>

        <TextView
            android:id="@+id/item_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/item_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/item_description"
            android:layout_margin="@dimen/default_item_margin"/>

        <View
            android:id="@+id/item_separator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/item_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="@dimen/default_item_margin"/>

        <TextView
            android:id="@+id/item_share_bt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/item_separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/item_share_bt"
            android:padding="@dimen/default_item_bt_margin"
            android:background="@drawable/item_bt"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_details_bt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/item_separator"
            app:layout_constraintEnd_toStartOf="@id/item_share_bt"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/item_details_bt"
            android:padding="@dimen/default_item_bt_margin"
            android:background="@drawable/item_bt"
            android:textColor="@android:color/holo_purple"
            android:textStyle="bold" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>